assets/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

html,body {
    width: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
}

body {
    font-family: "Quicksand", sans-serif;
}

h2 {
    text-transform: uppercase;
}


/* --------------------------------------Colours Section */

.btn {
    color: #FAFAFA;
    background-color: #FF8970;
    border: none;
}

.btn:active {
    -webkit-box-shadow: none;
            box-shadow: none;
}

/* --------------------------------------Nav Section */

.navbar {
    padding: 10px 50px;
    background-color: #FAFAFA;
}

.nav-item-list {
    -webkit-box-pack: end;
        -ms-flex-pack: end;
            justify-content: flex-end;
    font-size: 1.05rem;
    text-transform: uppercase;
}

.navbar-brand {
    font-size: 1.7rem;
    font-weight: 600;
}


/* --------------------------------------Jumbotron Section */
.jumbotron-container {
    height: 80vh;
    background: url('../images/jumbo-13.jpg') no-repeat fixed;
    background-size: cover;
    background-position: bottom;
    width: 100%;
    padding-top: 100px;
}

.jumbotron {
    background-color: transparent;
    padding-top: 0;
}

.jumbotron h1 {
    font-size: 4rem;
}

.jumbotron-button {
    margin-top: 50px;
}

/* --------------------------------------About Section */

.about-section {
    margin: 100px 100px;
}

.about-section h2 {
    margin: 0;
    padding-top: 0px;
    padding-bottom: 50px;
}

.about-section p {
    margin: 0;
    padding-top: 30px;
    padding-bottom: 50px;
}

.about-button {
    margin: 30px;
}

/* --------------------------------------Images Section */

.images-container {
    width: auto;
    padding: 0;
}

.images-container img{
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
}

.images-row {
    margin: 0;
    padding: 0;
}

.image {
    margin: 0;
    padding: 0;
}

/* -------------------------------------------Location */

.location-container {
    margin-top: 50px;
    margin-bottom: 100px
}

.location-map {
    width: auto;
    padding: 0;
}

.location-map img{
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
}


/* ------------------------------------------Contact Page */


.contact-section {
    margin: 100px 100px;
}

.contact-section h2 {
    margin: 0;
    padding-top: 0px;
    padding-bottom: 50px;
}

.contact-section p {
    margin: 0;
    padding-top: 30px;
    padding-bottom: 25px;
}

.form-container {
    padding-bottom: 100px;
}


/* ------------------------------------------Find a Class Page */

.findaclass-section {
    margin: 100px 75px;
    padding-top: 0px;
}

.findaclass-section h2 {
    margin: 0;
    padding-top: 0px;
    padding-bottom: 50px;
}

.findaclass-section p {
    margin: 0;
    padding-top: 30px;
}

.table-container {
    margin-left: 20%;
    margin-right: 20%
}



/* ------------------------------------------Footer Section */

footer {
    background-color: #fafafa;
    margin-top: 100px;
}

.social-links li a i {
    font-size: 20px;
    text-decoration: none;
    color: #FF8970;
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
}

.social-links li a i:hover {
    color: #212529;
}

/* -------------------------------------------Media Queries */
 

@media (max-width: 540px) {
    .jumbotron-container {
        height: 80vh;
        background: url('../images/mobile-13.jpg') no-repeat fixed;
        background-size: cover;
        background-position: bottom;
        width: 100%;
        padding-top: 75px;
        padding-right: 5%;
        padding-left: 5%;
    }

    .jumbotron-container h1 {  
        font-size: 40px;
    }

    .jumbotron-button {  
        margin-top: 10px;
    }

    .about-section {
    margin: 70px 20px;
    }

    .about-section h2 {
    padding-top: 30px;
    padding-bottom: 20px;
    margin: 0;
    }

    .about-section p {
        margin: 0px;
        padding-top: 20px;
        padding-bottom: 20px; 
    }

    .about-section button {
        margin: 20px 0px;
    }

    .contact-section  {
        margin: 70px 20px;
    }

    .form-container {
        margin: 60px 20px;
    }

    .findaclass-section  {
        margin: 70px 20px;
    }

    .table-container {
        margin-left: 1%;
        margin-right: 1%;
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
    }

    .table-column {
        margin: 0;
        padding: 0;
    }

    .table-row {
        margin-left: 0;
        margin-right: 0;
    }

    .location-text {
        margin: 10px 5px 30px 5px;
    }
}

